# bluestudio

./: .fancom  .gitignore  .prettierrc  README.md  eslint.config.js  package.json  pnpm-lock.yaml  svelte.config.js
src/: app.html
src-tauri/: Cargo.toml  bluestudio.sqlite  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/migrations/2024-11-19-002617_create_projects/: up.sql
src-tauri/migrations/2024-11-26-114003_create_projects_files/: down.sql  up.sql
src-tauri/src/: lib.rs  main.rs  models.rs  schema.rs
src-tauri/src/be/: db.rs  mod.rs
src-tauri/src/be/file_system/: dir_helpers.rs  file_info.rs  mod.rs
src-tauri/src/be/project_files/: mod.rs  project_files_repository.rs  project_files_service.rs
src-tauri/src/be/projects/: mod.rs  projects_repository.rs  projects_service.rs
src-tauri/src/bff/commands/: files.rs  mod.rs  parse_video.rs  project_files.rs  projects.rs
src-tauri/src/commands/: parse_video.rs
src/lib/media/: MediaExplorer.svelte  ProjectFilesManager.svelte
src/lib/player/: Player.svelte
src/lib/shared/: svelte-state.svelte.ts  types.ts  utils.ts
src/lib/shared/components/files-explorer/: DistinguishedFileIcon.svelte  FileInfo.ts  FileRow.svelte  FilesExplorer.svelte  FilesImporter.svelte  files.model.ts
src/lib/shared/icons/: ArrowLeftIcon.svelte  FileIcon.svelte  FolderIcon.svelte  ImportIcon.svelte  LogoIcon.svelte  PlusIcon.svelte  VideoLibraryIcon.svelte
src/lib/shared/icons/file-types/: AviFileIcon.svelte  JpgFileIcon.svelte  Mp3FileIcon.svelte  Mp4FileIcon.svelte  PngFileIcon.svelte  SvgFileIcon.svelte  WmvFileIcon.svelte  ZipFileIcon.svelte
src/lib/timeline/: Timeline.svelte
src/routes/: +layout.svelte  +page.svelte  global.css
src/routes/[projectId]/: +page.svelte
(+4 files in other folders)
