[package]
name = "bluestudio-app"
version = "0.1.0"
description = "BlueStudio's Bff & Be"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.133"
diesel = { version = "2.2.4", features = [
    "sqlite",
    "chrono",
    "r2d2",
    "numeric",
    "returning_clauses_for_sqlite_3_35",
] }
dotenvy = "0.15.7"
tauri-plugin-fs = "2.0.3"
ffmpeg-next = "7.0.1"
image = "0.25.5"
log = "0.4"
uuid = "1.11.0"
chrono = { version = "0.4.38", features = ["serde"] }
bigdecimal = { version = "0.4.5", features = ["serde"] }
thiserror = "2.0.3"
diesel_migrations = { version = "2.2", features = ["sqlite"] }
r2d2 = "0.8.10"
base64 = "0.22.1"
flate2 = "1.0.35"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
